# pbash

./: README.md  pyproject.toml
.github/workflows/: build.yml
debian/: changelog  control  pbash.bash-completion  pbash.links
pbash/: __init__.py  app.py  appConfig.py
pbash/modules/: commands.py  git.py  params.py  ui.py
